common/test/keyboards/invalid/compiler/source/CERR_80C0_test_expansion_absurd.kmn
c This file tests absurdly long expansions
store(&NAME) 'Test Expansions'
begin Unicode > use(main)

group(main) using keys

store(schar_range) U+0020 .. U+10FFFF
